move to bootstrap

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
         <link rel="stylesheet" type="text/less" href="css/main/style.less"/>
         <!-- Normalize -->
         <link rel="stylesheet" type="text/less" href="css/vendor/normalize.css"/>
+
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
        
     </head>
     <body >
@@ -32,6 +38,9 @@
                 <script src="js/main/main.js"></script>
                 <!-- LESS -->
                 <script type="text/javascript" src="js/vendor/less-1.7.3.min.js"></script>
+
+                <!-- Latest compiled and minified JavaScript -->
+                <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
                 
         </footer>
     </body>
