added in basic classes

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <title>Site Title</title>
           
         <!-- LESS -->
-        <link rel="stylesheet" type="text/less" href="css/main/style.less"/>
+        <link rel="stylesheet" type="text/less" href="static/css/main/style.less"/>
         <!-- Normalize -->
-        <link rel="stylesheet" type="text/less" href="css/vendor/normalize.css"/>
+        <link rel="stylesheet" type="text/less" href="static/css/vendor/normalize.css"/>
 
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
@@ -24,21 +24,21 @@
     </head>
     <body >
         <!-- Main Content of Page -->
-        <main>
+        <main class="container">
+            TEST BODY
         </main>
         <!-- Footer Content -->
         <footer>
                 <!-- JQuery -->
-                <script src="js/vendor/jquery-2.1.1.min.js"></script>
+                <script src="static/js/vendor/jquery-2.1.1.min.js"></script>
                 <!-- FastClick -->
-                <script type="text/javascript" src="js/vendor/fastclick.js"></script>
+                <script type="text/javascript" src="static/js/vendor/fastclick.js"></script>
                 <!-- Modernizr -->
-                <script type="text/javascript" src="js/vendor/modernizr.js"></script>
+                <script type="text/javascript" src="static/js/vendor/modernizr.js"></script>
                 <!-- Own JS File-->
-                <script src="js/main/main.js"></script>
+                <script src="static/js/main/main.js"></script>
                 <!-- LESS -->
-                <script type="text/javascript" src="js/vendor/less-1.7.3.min.js"></script>
-
+                <script type="text/javascript" src="static/js/vendor/less-1.7.3.min.js"></script>
                 <!-- Latest compiled and minified JavaScript -->
                 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
                 
