moved functions to cleaning

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 		<!--Game Content -->
 		<main class="col-xs-12">
 			<div class="game-container row">
+                         <div class="winning-conditions">
+
+                         </div>
 		            <div class="board-container col-xs-10 col-xs-offset-1">
                         </div> 
 			</div>
