--- a/index.html
+++ b/index.html
@@ -30,16 +30,56 @@
 		<!--Game Content -->
 		<main class="col-xs-12">
 			<div class="game-container row">
+                         <div class="">
+                              <!-- Button trigger modal -->
+                              <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#gameOptions">
+                                New Game
+                              </button>
+                         </div>
+                         <br><br>
                          <div class="winning-conditions">
                         
                          </div>
+
 		            <div class="board-container col-xs-10 col-xs-offset-1">
                         </div> 
 			</div>
 		</main>
             <!-- End of Game content -->
 
+            <!-- Modals -->
+            <div class="modal fade" id="gameOptions" tabindex="-1" role="dialog" aria-labelledby="gameOptionsLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <h4 class="modal-title" id="gameOptionsLabel">Choose Game Options</h4>
+                  </div>
+                  <div class="modal-body">
+                    <label> Number of Players </label>
+                    <br>
+                    <div class="btn-group number-players" role="group" aria-label="...">
+                      <button type="button" class="btn btn-primary" value="1">1</button>
+                      <button type="button" class="btn btn-primary" value="2">2</button>
+                    </div>
+                    <br><br>
+                    <label> Board Size</label>
+                    <br>
+                    <div class="btn-group board-size" role="group" aria-label="...">
+                      <button type="button" class="btn btn-primary" value="small">Small</button>
+                      <button type="button" class="btn btn-primary" value="medium">Medium</button>
+                      <button type="button" class="btn btn-primary" value="large">Big</button>
+                      <button type="button" class="btn btn-primary" value="random">Surprise Me</button>
+                    </div>
 
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary start-game">Start Game</button>
+                  </div>
+                </div>
+              </div>
+            </div>
 
 		<!-- Footer Content -->
 		<footer>
