removed online bootstrap stylesheet ref

--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
 		<link rel="stylesheet" type="text/css" href="static/css/vendor/normalize.css"/>
             <!-- Sweet Alert -->
             <link rel="stylesheet" type="text/css" href="static/css/vendor/sweet-alert.css"/>
-		<!-- Latest compiled and minified CSS -->
+		<!-- don't need
+		<! Latest compiled and minified CSS
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 
-		<!-- Optional theme -->
+		<! Optional theme
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
-
+		-->
 	</head>
 	<body >
              <header>
