Added header container

--- a/index.html
+++ b/index.html
@@ -14,19 +14,46 @@
 		<link rel="stylesheet" type="text/less" href="static/css/main/style.less"/>
 		<!-- CSS -->
 		<link rel="stylesheet" type="text/css" href="static/css/main/style.css"/>
+		<!-- Custom Fonts -->
+		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+		<link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 		<!-- Normalize -->
 		<link rel="stylesheet" type="text/css" href="static/css/vendor/normalize.css"/>
             <!-- Sweet Alert -->
             <link rel="stylesheet" type="text/css" href="static/css/vendor/sweet-alert.css"/>
-		<!-- don't need
+
+		<!-- Don't need, have custom local ref
 		<! Latest compiled and minified CSS
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 
 		<! Optional theme
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
 		-->
+
 	</head>
 	<body >
+
+		<!-- Header Info
+		================================================= -->
+		<div class="intro-header">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-7 col-lg-12">
+						<div class="intro-message">
+							<h1>Numero</h1>
+							<h3>By: #BitsPlease</h3>
+
+							<p class="lead">Roll your way to victory</p>
+							<p class="bs-component">
+								<a href="#game" class="btn btn-default"> Leggo </a>
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		
              <header>
                 <h2 class="jumbotron">GAME TITILE</h2>
              </header>
