Added information container, and banner

--- a/index.html
+++ b/index.html
@@ -53,10 +53,7 @@
 			</div>
 		</div>
 
-		
-             <header>
-                <h2 class="jumbotron">GAME TITILE</h2>
-             </header>
+
 		<!--Game Content -->
 		<main class="col-xs-12">
 			<div class="game-container row">
@@ -111,24 +108,53 @@
               </div>
             </div>
 
-		<!-- Footer Content -->
-		<footer>
-			<!-- JQuery -->
-			<script src="static/js/vendor/jquery-2.1.1.min.js"></script>
-			<!-- FastClick -->
-			<script type="text/javascript" src="static/js/vendor/fastclick.js"></script>
-			<!-- Modernizr -->
-			<script type="text/javascript" src="static/js/vendor/modernizr.js"></script>
+<!-- Information Container
+=================================================== -->
+<div class="content-section-a">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-5 col-sm-6">
+				<div class="clearfix"></div>
+				<h2 class="section-heading">How to <b>Play</b></h2>
+				<p class="lead">Simply use the Arrow Keys as Player 1 and WASD Keys as Player 2 to
+					control your respective dice.</p>
+				</div>
 
-			<!-- LESS -->
-			<script type="text/javascript" src="static/js/vendor/less-1.7.3.min.js"></script>
-			<!-- Latest compiled and minified JavaScript -->
-			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-                  <script type="text/javascript" src="static/js/vendor/sweet-alert.min.js"></script>
-                  <!-- Own JS File-->
-                  <script src="static/js/main/main.js"></script>
+				<div class="col-lg-5 col-lg-offset-2 col-sm-6">
+					<img class="img-responsive" src="./img/keyboard.png" alt="controls">
+				</div>
 
-		</footer>
+			</div>
+		</div>
+	</div>
+
+	<!-- Footer Info
+	=================================================== -->
+	<div class="banner">
+		<div class="container">
+
+		</div>
+	</div>
+	<footer>
+		<div class="container">
+			<p class="copyright text-muted small">Copyright &copy; Your Company 2014. All Rights Reserved</p>
+		</div>
+		<!-- JQuery -->
+		<script src="static/js/vendor/jquery-2.1.1.min.js"></script>
+		<!-- FastClick -->
+		<script type="text/javascript" src="static/js/vendor/fastclick.js"></script>
+		<!-- Modernizr -->
+		<script type="text/javascript" src="static/js/vendor/modernizr.js"></script>
+
+		<!-- LESS -->
+		<script type="text/javascript" src="static/js/vendor/less-1.7.3.min.js"></script>
+		<!-- Latest compiled and minified JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="static/js/vendor/sweet-alert.min.js"></script>
+		<!-- Own JS File-->
+		<script src="static/js/main/main.js"></script>
+	</footer>
+
 	</body>
 
 
