--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				</div>
 
 				<div class="col-lg-5 col-lg-offset-2 col-sm-6">
-					<img class="img-responsive" src="./img/keyboard.png" alt="controls">
+					<img class="img-responsive" src="./static/icons/keyboard.png" alt="controls">
 				</div>
 
 			</div>
