--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<!-- LESS -->
 		<link rel="stylesheet" type="text/less" href="static/css/main/style.less"/>
 		<!-- CSS -->
-		<link rel="stylesheet" type="text/css" href="static/css/main/style.css"/>
+		<link rel="stylesheet" type="text/css" href="static/css/main/bootstrap.css"/>
 		<!-- Custom Fonts -->
 		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 		<link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
@@ -45,7 +45,7 @@
 
 							<p class="lead">Roll your way to victory</p>
 							<p class="bs-component">
-								<a href="#game" class="btn btn-default"> Leggo </a>
+								<a href="#game" class="btn btn-default go-to-game"> Leggo </a>
 							</p>
 						</div>
 					</div>
