fixed issue with setting a instance variable

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 		<!--Game Content -->
 		<main class="col-xs-12">
-			<div class="game-container row">
+			<div class="game-container row" id="game">
                          <div class="">
                               <!-- Button trigger modal -->
                               <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#gameOptions">
