added source code and new tile images

--- a/index.html
+++ b/index.html
@@ -134,15 +134,16 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-4 col-sm-offset-2">
-					<h2>Source Code</h3>
+					<h3>Source Code</h3>
 					<p>Want to contribute?</p>
-				</div>
-				<div class="col-sm-4">
-					<ul class="list-inline banner-social-buttons">
+					<ul class="banner-social-buttons">
 						<li>
 							<a href="https://github.com/koding/global.hackathon" class="btn btn-default btn-lg"><i class="icon-github-alt icon-2x"></i> Koding</a>
 						</li>
 					</ul>
+				</div>
+				<div class="col-sm-4">
+
 				</div>
 			</div>
 		</div>
