--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
 		<div class="row">
 			<div class="col-lg-5 col-sm-6">
 				<div class="clearfix"></div>
-				<h2 class="section-heading">How to <b>Play</b></h2>
-				<p class="lead">Simply use the Arrow Keys as Player 1 and WASD Keys as Player 2 to
-					control your respective dice.</p>
+					<h2 class="section-heading">How to <b>Play</b></h2>
+					<p class="lead">Simply use the Arrow Keys as Player 1 and WASD Keys as Player 2 to
+						control your respective dice.</p>
 				</div>
 
 				<div class="col-lg-5 col-lg-offset-2 col-sm-6">
@@ -136,7 +136,7 @@
 				<div class="col-sm-4 col-sm-offset-2">
 					<h3>Source Code</h3>
 					<p>Want to contribute?</p>
-					<ul class="banner-social-buttons">
+					<ul class="list-inline banner-social-buttons">
 						<li>
 							<a href="https://github.com/koding/global.hackathon" class="btn btn-default btn-lg"><i class="icon-github-alt icon-2x"></i> Koding</a>
 						</li>
