--- a/index.html
+++ b/index.html
@@ -67,9 +67,16 @@
                          <div class="winning-conditions">
 
                          </div>
+                         <div class="player-score player-one col-xs-6">
 
-		            <div class="board-container col-xs-10 col-xs-offset-1">
-                        </div>
+                         </div>
+                         <div class="player-score player-two col-xs-6">
+                           
+                         </div>
+		            <div class="board-container col-xs-12">
+
+
+                         </div>
 			</div>
 		</main>
             <!-- End of Game content -->
