made grid borders

--- a/index.html
+++ b/index.html
@@ -134,20 +134,39 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-4 col-sm-offset-2">
-					<h3>Source Code</h3>
-					<p>Want to contribute?</p>
-					<ul class="list-inline banner-social-buttons">
-						<li>
-							<a href="https://github.com/koding/global.hackathon" class="btn btn-default btn-lg"><i class="icon-github-alt icon-2x"></i> Koding</a>
-						</li>
-					</ul>
+					<div class="banner-message">
+						<h3>Source Code</h3>
+						<p>Want to contribute?</p>
+						<ul class="list-inline banner-social-buttons">
+							<li>
+								<a href="https://github.com/koding/global.hackathon"
+								class="btn btn-default btn-lg"><i class="icon-github-alt"></i> Koding</a>
+							</li>
+						</ul>
+					</div>
 				</div>
-				<div class="col-sm-4">
-
+				<div class="col-sm-4 col-sm-offset-2">
+					<div class="banner-message">
+						<h3>Who Are We</h3>
+						<p>#hashtag and say hi!</p>
+						<div class="btn-group open">
+							<a class="btn btn-primary" href="#"><i class="icon-user"></i> Team</a>
+							<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">
+								<span class="icon-caret-down"></span></a>
+								<ul class="dropdown-menu">
+									<li><a href="#"><i class="icon-fixed-width icon-twitter"></i> BP</a></li>
+									<li><a href="#"><i class="icon-fixed-width icon-twitter"></i> MP</a></li>
+									<li><a href="#"><i class="icon-fixed-width icon-twitter"></i> AL</a></li>
+									<li><a href="#"><i class="icon-fixed-width icon-twitter"></i> BW</a></li>
+									<li><a href="#"><i class="icon-fixed-width icon-twitter"></i> PD</a></li>
+								</ul>
+							</div>
+						</div>
 				</div>
 			</div>
 		</div>
 	</div>
+
 	<footer>
 		<div class="container">
 			<p class="copyright text-muted small">Copyright &copy; Your Company 2014. All Rights Reserved</p>
