moved code to new game function

--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
                     <label> Number of Players </label>
                     <br>
                     <div class="btn-group number-players" role="group" aria-label="...">
-                      <button type="button" class="btn btn-primary" value="1">1</button>
+                      <button type="button" class="btn btn-primary active" value="1">1</button>
                       <button type="button" class="btn btn-primary" value="2">2</button>
                     </div>
                     <br><br>
                     <label> Board Size</label>
                     <br>
                     <div class="btn-group board-size" role="group" aria-label="...">
-                      <button type="button" class="btn btn-primary" value="small">Small</button>
+                      <button type="button" class="btn btn-primary active" value="small">Small</button>
                       <button type="button" class="btn btn-primary" value="medium">Medium</button>
                       <button type="button" class="btn btn-primary" value="large">Big</button>
                       <button type="button" class="btn btn-primary" value="random">Surprise Me</button>
