added the border tiles

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
                          </div>
                          <div class="player-score player-two col-xs-6">
-                           
+
                          </div>
 		            <div class="board-container col-xs-12">
 
@@ -147,7 +147,7 @@
 						<ul class="list-inline banner-social-buttons">
 							<li>
 								<a href="https://github.com/koding/global.hackathon"
-								class="btn btn-default btn-lg"><i class="icon-github-alt"></i> Koding</a>
+								class="btn btn-default btn-success"><i class="icon-github-alt"></i> Koding</a>
 							</li>
 						</ul>
 					</div>
@@ -176,7 +176,7 @@
 
 	<footer>
 		<div class="container">
-			<p class="copyright text-muted small">Copyright &copy; Your Company 2014. All Rights Reserved</p>
+			<p class="copyright text-muted small">MIT Copyright Licence</p>
 		</div>
 		<!-- JQuery -->
 		<script src="static/js/vendor/jquery-2.1.1.min.js"></script>
