--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
 		<!-- Site Properities -->
-		<title>Numero Game</title>
+		<title>Numero! Game</title>
 
 		<!-- LESS -->
 		<link rel="stylesheet" type="text/less" href="static/css/main/style.less"/>
@@ -41,7 +41,7 @@
 					<div class="col-sm-7 col-lg-12">
 						<div class="intro-message">
 							<h1>Numero</h1>
-							<h3>By: #BitsPlease</h3>
+							<h4>Brought to you By: #BitsPlease</h4>
 
 							<p class="lead">Roll your way to victory</p>
 							<p class="bs-component">
@@ -131,6 +131,15 @@
 					<img class="img-responsive" src="./static/icons/keyboard.png" alt="controls">
 				</div>
 
+			</div>
+
+			<div class="row">
+				<div class="col-sm-12">
+					<h2 class="section-heading"> The <b>Goal</b> of Numero!</h2>
+					<p class="lead">Numero! is designed to provoke the player's ability in
+						spatial judegement and teach the concept of pattern recognition and
+						strategic planning. </p>
+				</div>
 			</div>
 		</div>
 	</div>
