changed intro-bg in png files

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
 					<div class="col-sm-7 col-lg-12">
 						<div class="intro-message">
 							<h1>Numero</h1>
-							<h4>Brought to you By: #BitsPlease</h4>
+							<h4>Brought to you by: <a href="https://github.com/koding/
+								global.hackathon/blob/master/Teams/BitsPlease/ABOUT.md">
+								#BitsPlease
+								</a></h4>
 
 							<p class="lead">Roll your way to victory</p>
 							<p class="bs-component">
@@ -138,7 +141,14 @@
 					<h2 class="section-heading"> The <b>Goal</b> of Numero!</h2>
 					<p class="lead">Numero! is designed to provoke the player's ability in
 						spatial judegement and teach the concept of pattern recognition and
-						strategic planning. </p>
+						strategic planning. To learn more about spatial judegement and the
+						nine modalities of inteligence, please refer to <a href="http:
+						//en.wikipedia.org/wiki/Theory_of_multiple_intelligences">Howard
+						Garnder's</a> book <a href="http://www.amazon.ca/Frames-Mind-
+						Theory-Multiple-Intelligences/dp/0465024335">Frames of Mind</a>.
+						<br>
+
+					</p>
 				</div>
 			</div>
 		</div>
