--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
 		<!-- Site Properities -->
-		<title>Numero! Game</title>
+		<title>Num&#233ro! Game</title>
 
 		<!-- LESS -->
 		<link rel="stylesheet" type="text/less" href="static/css/main/style.less"/>
@@ -38,9 +38,9 @@
 		<div class="intro-header">
 			<div class="container">
 				<div class="row">
-					<div class="col-sm-7 col-lg-12">
+					<div class="col-sm-12 col-lg-12">
 						<div class="intro-message">
-							<h1>Numero</h1>
+							<h1>Num&#233ro!</h1>
 							<h4>Brought to you by: <a href="https://github.com/koding/
 								global.hackathon/blob/master/Teams/BitsPlease/ABOUT.md">
 								#BitsPlease
@@ -59,103 +59,109 @@
 
 		<!--Game Content -->
 		<main class="col-xs-12">
-			<div class="game-container row" id="game">
-                         <div class="">
-                              <!-- Button trigger modal -->
-                              <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#gameOptions">
-                                New Game
-                              </button>
-                         </div>
-                         <br><br>
-                         <div class="winning-conditions">
+			<div class="game-container">
+				<div class="row" id="game">
+					<div class="">
+        		<!-- Button trigger modal -->
+        		<button type="button" class="btn btn-primary btn-lg"
+						data-toggle="modal" data-target="#gameOptions">
+          	New Game
+						</button>
+   				</div>
+   				<br><br>
 
-                         </div>
-                         <div class="player-score player-one col-xs-6">
+					<div class="winning-conditions">
 
-                         </div>
-                         <div class="player-score player-two col-xs-6">
+   				</div>	
 
-                         </div>
-		            <div class="board-container col-xs-12">
+					<div class="player-score player-one col-xs-6">
 
+   				</div>
 
-                         </div>
+					<div class="player-score player-two col-xs-6">
+
+   				</div>
+
+					<div class="board-container col-xs-12">
+
+         </div>
+				</div>
 			</div>
 		</main>
-            <!-- End of Game content -->
+    <!-- End of Game content -->
 
-            <!-- Modals -->
-            <div class="modal fade" id="gameOptions" tabindex="-1" role="dialog" aria-labelledby="gameOptionsLabel" aria-hidden="true">
-              <div class="modal-dialog">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                    <h4 class="modal-title" id="gameOptionsLabel">Choose Game Options</h4>
-                  </div>
-                  <div class="modal-body">
-                    <label> Number of Players </label>
-                    <br>
-                    <div class="btn-group number-players" role="group" aria-label="...">
-                      <button type="button" class="btn btn-primary active" value="1">1</button>
-                      <button type="button" class="btn btn-primary" value="2">2</button>
-                    </div>
-                    <br><br>
-                    <label> Board Size</label>
-                    <br>
-                    <div class="btn-group board-size" role="group" aria-label="...">
-                      <button type="button" class="btn btn-primary active" value="small">Small</button>
-                      <button type="button" class="btn btn-primary" value="medium">Medium</button>
-                      <button type="button" class="btn btn-primary" value="large">Big</button>
-                      <button type="button" class="btn btn-primary" value="random">Surprise Me</button>
-                    </div>
-
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary start-game">Start Game</button>
-                  </div>
-                </div>
-              </div>
+    <!-- Modals -->
+    <div class="modal fade" id="gameOptions" tabindex="-1" role="dialog" aria-labelledby="gameOptionsLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+            <h4 class="modal-title" id="gameOptionsLabel">Choose Game Options</h4>
+          </div>
+          <div class="modal-body">
+            <label> Number of Players </label>
+            <br>
+            <div class="btn-group number-players" role="group" aria-label="...">
+              <button type="button" class="btn btn-primary active" value="1">1</button>
+              <button type="button" class="btn btn-primary" value="2">2</button>
+            </div>
+            <br><br>
+            <label> Board Size</label>
+            <br>
+            <div class="btn-group board-size" role="group" aria-label="...">
+              <button type="button" class="btn btn-primary active" value="small">Small</button>
+              <button type="button" class="btn btn-primary" value="medium">Medium</button>
+              <button type="button" class="btn btn-primary" value="large">Big</button>
+              <button type="button" class="btn btn-primary" value="random">Surprise Me</button>
             </div>
 
-<!-- Information Container
-=================================================== -->
-<div class="content-section-a">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-5 col-sm-6">
-				<div class="clearfix"></div>
-					<h2 class="section-heading">How to <b>Play</b></h2>
-					<p class="lead">Simply use the Arrow Keys as Player 1 and WASD Keys as Player 2 to
-						control your respective dice.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary start-game">Start Game</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+		<!-- Information Container
+		=================================================== -->
+		<div class="content-section-a">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-5 col-sm-6">
+						<div class="clearfix"></div>
+						<h2 class="section-heading">How to <b>Play</b></h2>
+						<p class="lead">Simply use the Arrow Keys as Player 1 and WASD Keys as Player 2 to
+							control your respective dice.</p>
+						</div>
+
+						<div class="col-lg-5 col-lg-offset-2 col-sm-6">
+							<img class="img-responsive" src="./static/icons/keyboard.png" alt="controls">
+						</div>
+
 				</div>
 
-				<div class="col-lg-5 col-lg-offset-2 col-sm-6">
-					<img class="img-responsive" src="./static/icons/keyboard.png" alt="controls">
-				</div>
+				<div class="row">
+					<div class="col-sm-12">
+						<h2 class="section-heading"> The <b>Goal</b> of Num&#233ro!</h2>
+						<p class="lead">Num&#233ro! is designed to provoke the player's ability in
+							spatial judegement and teach the concept of pattern recognition and
+							strategic planning. To learn more about spatial judegement and the
+							nine modalities of inteligence, please refer to <a href="http:
+							//en.wikipedia.org/wiki/Theory_of_multiple_intelligences">Howard
+							Garnder's</a> book <a href="http://www.amazon.ca/Frames-Mind-
+							Theory-Multiple-Intelligences/dp/0465024335">Frames of Mind</a>.
+							<br>
 
-			</div>
-
-			<div class="row">
-				<div class="col-sm-12">
-					<h2 class="section-heading"> The <b>Goal</b> of Numero!</h2>
-					<p class="lead">Numero! is designed to provoke the player's ability in
-						spatial judegement and teach the concept of pattern recognition and
-						strategic planning. To learn more about spatial judegement and the
-						nine modalities of inteligence, please refer to <a href="http:
-						//en.wikipedia.org/wiki/Theory_of_multiple_intelligences">Howard
-						Garnder's</a> book <a href="http://www.amazon.ca/Frames-Mind-
-						Theory-Multiple-Intelligences/dp/0465024335">Frames of Mind</a>.
-						<br>
-
-					</p>
+						</p>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
 
-	<!-- Footer Info
-	=================================================== -->
+		<!-- Footer Info
+		=================================================== -->
 	<div class="banner">
 		<div class="container">
 			<div class="row">
@@ -213,7 +219,7 @@
 		<script src="static/js/main/main.js"></script>
 	</footer>
 
-	</body>
+</body>
 
 
 </html>
