changed name of one block function to be smarter

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                     <label> Board Size</label>
                     <br>
                     <div class="btn-group board-size" role="group" aria-label="...">
-                      <button type="button" class="btn btn-primary active" value="small">Small</button>
-                      <button type="button" class="btn btn-primary" value="medium">Medium</button>
+                      <button type="button" class="btn btn-primary" value="small">Small</button>
+                      <button type="button" class="btn btn-primary active" value="medium">Medium</button>
                       <button type="button" class="btn btn-primary" value="large">Big</button>
                       <button type="button" class="btn btn-primary" value="random">Surprise Me</button>
                     </div>
