fine tuned margins on game-container

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 					<div class="winning-conditions">
 
-   				</div>	
+   				</div>
 
 					<div class="player-score player-one col-xs-6">
 
@@ -146,9 +146,9 @@
 					<div class="col-sm-12">
 						<h2 class="section-heading"> The <b>Goal</b> of Num&#233ro!</h2>
 						<p class="lead">Num&#233ro! is designed to provoke the player's ability in
-							spatial judegement and teach the concept of pattern recognition and
-							strategic planning. To learn more about spatial judegement and the
-							nine modalities of inteligence, please refer to <a href="http:
+							spatial judgment and teach the concept of pattern recognition and
+							strategic planning. To learn more about spatial judgment and the
+							nine modalities of intelligence, please refer to <a href="http:
 							//en.wikipedia.org/wiki/Theory_of_multiple_intelligences">Howard
 							Garnder's</a> book <a href="http://www.amazon.ca/Frames-Mind-
 							Theory-Multiple-Intelligences/dp/0465024335">Frames of Mind</a>.
