player names as the scores

--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
                          </div>
                          <div class="scores" style="display:none;">
                            <div class="player-score player-one col-xs-6">
-                            <h3>Player 1 Score: <span class="score odometer">0</span></h3>
+                           <h3><span class="player-name">Player 1 </span> Score: <span class="score odometer">0</span></h3>
                            </div>
                            <div class="player-score player-two col-xs-6" style="display:none;">
-                            <h3>Player 2 Score: <span class="score odometer">0</span></h3>
+                           <h3><span class="player-name">Player 2 </span> Score: <span class="score odometer">0</span></h3>
                          </div>
                          </div>
 		            <div class="board-container col-xs-12">
