--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 						<div class="intro-message">
 							<h1>Num&#233ro!</h1>
 							<h4>Brought to you by: <a href="https://github.com/koding/
-								global.hackathon/blob/master/Teams/BitsPlease/ABOUT.md">
+								global.hackathon/blob/master/Teams/BitsPlease/ABOUT.md" >
 								#BitsPlease
 								</a></h4>
-
-							<p class="lead">Roll your way to victory</p>
+							<hr class="intro-divider">
+							<h5>Roll your way to victory</h5>
 							<p class="bs-component">
 								<a href="#game" class="btn btn-default go-to-game"> Leggo </a>
 							</p>
