--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 
 	<footer>
 		<div class="container">
-			<p class="copyright text-muted small">MIT Copyright Licence</p>
+			<p class="copyright text-muted small">MIT Copyright Licensce</p>
 		</div>
 		<!-- JQuery -->
 		<script src="static/js/vendor/jquery-2.1.1.min.js"></script>
