--- a/index.html
+++ b/index.html
@@ -193,11 +193,11 @@
 							<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">
 								<span class="icon-caret-down"></span></a>
 								<ul class="dropdown-menu">
-									<li><a href="#"><i class="icon-fixed-width icon-twitter"></i> BP</a></li>
-									<li><a href="#"><i class="icon-fixed-width icon-twitter"></i> MP</a></li>
-									<li><a href="#"><i class="icon-fixed-width icon-twitter"></i> AL</a></li>
-									<li><a href="#"><i class="icon-fixed-width icon-twitter"></i> BW</a></li>
-									<li><a href="#"><i class="icon-fixed-width icon-twitter"></i> PD</a></li>
+									<li><a href="https://twitter.com/intent/tweet?button_hashtag=b_phantastik"><i class="icon-fixed-width icon-twitter"></i> BP</a></li>
+									<li><a href="https://twitter.com/intent/tweet?button_hashtag=mattpua"><i class="icon-fixed-width icon-twitter"></i> MP</a></li>
+									<li><a href="https://twitter.com/intent/tweet?button_hashtag=amelia"><i class="icon-fixed-width icon-twitter"></i> AL</a></li>
+									<li><a href="https://twitter.com/intent/tweet?button_hashtag=winning"><i class="icon-fixed-width icon-twitter"></i> BW</a></li>
+									<li><a href="https://twitter.com/intent/tweet?button_hashtag=paulliwali"><i class="icon-fixed-width icon-twitter"></i> PD</a></li>
 								</ul>
 							</div>
 						</div>
