added script.js for soundcloud api

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 									</div>
 									<div class="modal-body">
 										<label> Number of Players </label>
-										<br>
+										<glbr>
 										<div class="btn-group number-players" role="group" aria-label="...">
 											<button type="button" class="btn btn-primary active" value="1">1</button>
 											<button type="button" class="btn btn-primary" value="2">2</button>
