--- a/index.html
+++ b/index.html
@@ -24,13 +24,10 @@
 						<!-- Odometer -->
 						<link rel="stylesheet" type="text/css" href="static/css/vendor/odometer.css"/>
 
-		<!-- Don't need, have custom local ref
-		<! Latest compiled and minified CSS
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+		<!-- SoundCloud API -->
+		<script src="//connect.soundcloud.com/sdk.js"></script>
+		<script src="static/js/main/script.js"></script>
 
-		<! Optional theme
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
-		-->
 
 	</head>
 	<body >
@@ -180,6 +177,9 @@
 							<li>
 								<a href="https://github.com/koding/global.hackathon"
 								class="btn btn-default btn-success"><i class="icon-github-alt"></i> Koding</a>
+							</li>
+							<li>
+								<input type="button" href="#" id="stream" class="big button" value="Stream It Again, Sam" />
 							</li>
 						</ul>
 					</div>
