--- a/index.html
+++ b/index.html
@@ -23,12 +23,6 @@
 						<link rel="stylesheet" type="text/css" href="static/css/vendor/sweet-alert.css"/>
 						<!-- Odometer -->
 						<link rel="stylesheet" type="text/css" href="static/css/vendor/odometer.css"/>
-
-		<!-- SoundCloud API -->
-		<script src="//connect.soundcloud.com/sdk.js"></script>
-		<script src="static/js/main/script.js"></script>
-
-
 	</head>
 	<body >
 
@@ -179,7 +173,8 @@
 								class="btn btn-default btn-success"><i class="icon-github-alt"></i> Koding</a>
 							</li>
 							<li>
-								<input type="button" href="#" id="stream" class="big button" value="Stream It Again, Sam" />
+								<input type="button" id="loadTracks" class="button big" value="Get hottest track" />
+								<div id="track"></div>
 							</li>
 						</ul>
 					</div>
@@ -225,6 +220,9 @@
 		<script type="text/javascript" src="static/js/vendor/sweet-alert.min.js"></script>
 		<script src="static/js/vendor/odometer.min.js" type="text/javascript"></script>
 		<!-- Own JS File-->
+		<!-- SoundCloud API -->
+		<script src="//connect.soundcloud.com/sdk.js"></script>
+		<script src="static/js/main/script.js"></script>
 		<script src="static/js/main/main.js"></script>
 	</footer>
 
