added soundcloud widget

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 							<h5>Roll your way to victory</h5>
 							<p class="bs-component">
 								<a href="#game" class="btn btn-default go-to-game"> Leggo </a>
+								<input type="button" id="login" class="btn btn-success" value="Connect to SoundCloud" />
 							</p>
 						</div>
 					</div>
@@ -54,13 +55,15 @@
 		<main class="col-xs-12">
 			<div class="game-container">
 				<div class="row" id="game">
-					<div class="">
+					<div class="col-sm-12">
 						<!-- Button trigger modal -->
 						<button type="button" class="btn btn-primary btn-lg"
 						data-toggle="modal" data-target="#gameOptions">
 						New Game
 						</button>
 					</div>
+
+
 					<br><br>
 
 					<div class="winning-conditions">
@@ -160,6 +163,11 @@
 
 		<!-- Footer Info
 		=================================================== -->
+	<div class="row">
+		<div class="col-sm-12">
+			<div id="player"></div>
+		</div>
+	</div>
 	<div class="banner">
 		<div class="container">
 			<div class="row">
@@ -171,10 +179,6 @@
 							<li>
 								<a href="https://github.com/koding/global.hackathon"
 								class="btn btn-default btn-success"><i class="icon-github-alt"></i> Koding</a>
-							</li>
-							<li>
-								<input type="button" id="loadTracks" class="button big" value="Get hottest track" />
-								<div id="track"></div>
 							</li>
 						</ul>
 					</div>
