--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
 							<hr class="intro-divider">
 							<h5>Roll your way to victory</h5>
 							<p class="bs-component">
-								<a href="#game" class="btn btn-default go-to-game"> Leggo </a>
-								<input type="button" id="login" class="btn btn-success" value="Connect to SoundCloud" />
+								<a href="#game" class="btn btn-default go-to-game">
+									Leggo<i class="icon-level-down"></i>
+								</a>
 							</p>
 						</div>
 					</div>
@@ -61,6 +62,7 @@
 						data-toggle="modal" data-target="#gameOptions">
 						New Game
 						</button>
+							<input type="button" class="btn btn-success btn-lg" id="login" value="Connect to SoundCloud">
 					</div>
 
 
@@ -133,7 +135,7 @@
 					<div class="col-lg-5 col-sm-6">
 						<div class="clearfix"></div>
 						<h2 class="section-heading">How to <b>Play</b></h2>
-						<p class="lead">Simply use the Arrow Keys as Player 1 and WASD Keys as Player 2 to
+						<p class="lead">Simply use the WASD Keys as Player 1 and Arrow Keys as Player 2 to
 							control your respective dice.</p>
 						</div>
 
