--- a/index.html
+++ b/index.html
@@ -170,6 +170,11 @@
 			<div id="player"></div>
 		</div>
 	</div>
+	<div class="row">
+		<div class="col-sm-12">
+			<div id="track"></div>
+		</div>
+	</div>
 	<div class="banner">
 		<div class="container">
 			<div class="row">
@@ -233,6 +238,7 @@
 		<!-- SoundCloud API -->
 		<script src="//connect.soundcloud.com/sdk.js"></script>
 		<script src="static/js/main/script.js"></script>
+
 		<script src="static/js/main/main.js"></script>
 	</footer>
 
