--- a/index.html
+++ b/index.html
@@ -71,6 +71,50 @@
 					<div class="winning-conditions">
 
 					</div>
+
+					<div class="dice-layout" style="display:none;">
+						<div class="player-one col-xs-6">
+								<div class="layout-container">
+										<div class="row">
+											<div class="col-xs-4 dice-face front-face">
+											</div>
+										</div>
+										<div class="row">
+											<div class="col-xs-4 left-face dice-face">
+											</div>
+											<div class="col-xs-4 current-face dice-face">
+											</div>
+											<div class="col-xs-4 right-face dice-face">
+											</div>
+										</div>
+										<div class="row">
+											<div class="col-xs-4 back-face dice-face">
+											</div>
+										</div>
+								</div>
+						</div>
+						<div class="player-two col-xs-6">
+								<div class="layout-container">
+										<div class="row">
+											<div class="col-xs-4 dice-face front-face">
+											</div>
+										</div>
+										<div class="row">
+											<div class="col-xs-4 left-face dice-face">
+											</div>
+											<div class="col-xs-4 current-face dice-face">
+											</div>
+											<div class="col-xs-4 right-face dice-face">
+											</div>
+										</div>
+										<div class="row">
+											<div class="col-xs-4 back-face dice-face">
+											</div>
+										</div>
+								</div>
+						</div>
+					</div>
+
 					</div>
 						<div class="scores" style="display:none;">
 						 <div class="player-score player-one col-xs-6">
