--- a/index.html
+++ b/index.html
@@ -184,15 +184,15 @@
 						<p>Want to contribute?</p>
 						<ul class="list-inline banner-social-buttons">
 							<li>
-								<a href="https://github.com/koding/global.hackathon"
-								class="btn btn-default btn-success"><i class="icon-github-alt"></i> Koding</a>
+								<a href="https://github.com/paulliwali/numero"
+								class="btn btn-default btn-success"><i class="icon-github-alt"></i> Repo</a>
 							</li>
 						</ul>
 					</div>
 				</div>
 				<div class="col-sm-4 col-sm-offset-2">
 					<div class="banner-message">
-						<h3>Who Are We</h3>
+						<h3>Talk To Us!</h3>
 						<p>#hashtag and say hi!</p>
 						<div class="btn-group open">
 							<a class="btn btn-primary" href="https://twitter.com/intent/tweet?button_hashtag=bitsplease"><i class="icon-user"></i> Team</a>
@@ -230,15 +230,11 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="static/js/vendor/sweet-alert.min.js"></script>
 		<script src="static/js/vendor/odometer.min.js" type="text/javascript"></script>
-		<!-- SoundCloud API -->
-		<script src="//connect.soundcloud.com/sdk.js"></script>
-		<script src="static/js/main/script.js"></script>
 
 		<!-- Own JS File-->
 		<!-- SoundCloud API -->
 		<script src="//connect.soundcloud.com/sdk.js"></script>
 		<script src="static/js/main/script.js"></script>
-
 		<script src="static/js/main/main.js"></script>
 	</footer>
 
