--- a/index.html
+++ b/index.html
@@ -76,19 +76,19 @@
 						<div class="player-one col-xs-6">
 								<div class="layout-container">
 										<div class="row">
-											<div class="col-xs-4 dice-face front-face">
+											<div class="col-xs-4 dice-face front-face dice-face-v1">
 											</div>
 										</div>
 										<div class="row">
-											<div class="col-xs-4 left-face dice-face">
+											<div class="col-xs-4 left-face dice-face dice-face-v1">
 											</div>
-											<div class="col-xs-4 current-face dice-face">
+											<div class="col-xs-4 current-face dice-face dice-face-v1">
 											</div>
-											<div class="col-xs-4 right-face dice-face">
+											<div class="col-xs-4 right-face dice-face dice-face-v1">
 											</div>
 										</div>
 										<div class="row">
-											<div class="col-xs-4 back-face dice-face">
+											<div class="col-xs-4 back-face dice-face dice-face-v1">
 											</div>
 										</div>
 								</div>
@@ -96,19 +96,19 @@
 						<div class="player-two col-xs-6">
 								<div class="layout-container">
 										<div class="row">
-											<div class="col-xs-4 dice-face front-face">
+											<div class="col-xs-4 dice-face front-face dice-face-v2">
 											</div>
 										</div>
 										<div class="row">
-											<div class="col-xs-4 left-face dice-face">
+											<div class="col-xs-4 left-face dice-face dice-face-v2">
 											</div>
-											<div class="col-xs-4 current-face dice-face">
+											<div class="col-xs-4 current-face dice-face dice-face-v2">
 											</div>
-											<div class="col-xs-4 right-face dice-face">
+											<div class="col-xs-4 right-face dice-face dice-face-v2">
 											</div>
 										</div>
 										<div class="row">
-											<div class="col-xs-4 back-face dice-face">
+											<div class="col-xs-4 back-face dice-face dice-face-v2">
 											</div>
 										</div>
 								</div>
