added about us to footer

--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
 						</ul>
 					</div>
 				</div>
+
 				<div class="col-sm-4 col-sm-offset-2">
 					<div class="banner-message">
 						<h3>Talk To Us!</h3>
@@ -258,7 +259,15 @@
 
 	<footer>
 		<div class="container">
-			<p class="copyright text-muted small">MIT Copyright Licensce</p>
+			<div class="row">
+				<div class="col-sm-12 col-sm-offset-0">
+						<p class="aboutus">
+							<a href="https://github.com/koding/global.hackathon/blob/master/Teams/BitsPlease/ABOUT.md">
+								<i class="icon-github-alt"></i> About Us: </a>
+								Meet the people behind the code
+						</p>
+				</div>
+			</div>
 		</div>
 		<!-- JQuery -->
 		<script src="static/js/vendor/jquery-2.1.1.min.js"></script>
