--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 								</a></h4>
 							<hr class="intro-divider">
 							<h5>Roll your way to victory</h5>
+							<p class="lead">by landing on the special tile with the objective number on top!</p>
 							<p class="bs-component">
 								<a href="#game" class="btn btn-default go-to-game">
 									Leggo<i class="icon-level-down"></i>
@@ -72,60 +73,66 @@
 
 					</div>
 
-					<div class="dice-layout" style="display:none;">
-						<div class="player-one col-xs-6">
-								<div class="layout-container">
-										<div class="row">
-											<div class="col-xs-4 dice-face front-face dice-face-v1">
-											</div>
-										</div>
-										<div class="row">
-											<div class="col-xs-4 left-face dice-face dice-face-v1">
-											</div>
-											<div class="col-xs-4 current-face dice-face dice-face-v1">
-											</div>
-											<div class="col-xs-4 right-face dice-face dice-face-v1">
-											</div>
-										</div>
-										<div class="row">
-											<div class="col-xs-4 back-face dice-face dice-face-v1">
-											</div>
-										</div>
-								</div>
-						</div>
-						<div class="player-two col-xs-6">
-								<div class="layout-container">
-										<div class="row">
-											<div class="col-xs-4 dice-face front-face dice-face-v2">
-											</div>
-										</div>
-										<div class="row">
-											<div class="col-xs-4 left-face dice-face dice-face-v2">
-											</div>
-											<div class="col-xs-4 current-face dice-face dice-face-v2">
-											</div>
-											<div class="col-xs-4 right-face dice-face dice-face-v2">
-											</div>
-										</div>
-										<div class="row">
-											<div class="col-xs-4 back-face dice-face dice-face-v2">
-											</div>
-										</div>
-								</div>
-						</div>
-					</div>
+
 
 					</div>
-						<div class="scores" style="display:none;">
-						 <div class="player-score player-one col-xs-6">
-						 <h3><span class="player-name">Player 1 </span> Score: <span class="score odometer">0</span></h3>
-						 </div>
-						 <div class="player-score player-two col-xs-6" style="display:none;">
-						 <h3><span class="player-name">Player 2 </span> Score: <span class="score odometer">0</span></h3>
+
 						</div>
-						</div>
-					 <div class="board-container col-xs-12" >
+					 <div class="board-container col-xs-6" >
 					 </div>
+					<div class ="col-xs-6">
+
+						<div class="scores col-xs-12" style="display:none;">
+							<div class="player-score player-one col-xs-6">
+								<h3><span class="player-name">Player 1 </span> Score: <span class="score odometer">0</span></h3>
+							</div>
+							<div class="player-score player-two col-xs-6" style="display:none;">
+								<h3><span class="player-name">Player 2 </span> Score: <span class="score odometer">0</span></h3>
+							</div>
+
+					<div class="dice-layout col-xs-12" style="display:none;" margin-top: 150px ;>
+						<div class="player-one col-xs-6">
+							<div class="layout-container">
+								<div class="row">
+									<div class="col-xs-4 dice-face front-face dice-face-v1">
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-4 left-face dice-face dice-face-v1">
+									</div>
+									<div class="col-xs-4 current-face dice-face dice-face-v1">
+									</div>
+									<div class="col-xs-4 right-face dice-face dice-face-v1">
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-4 back-face dice-face dice-face-v1">
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="player-two col-xs-6">
+							<div class="layout-container">
+								<div class="row">
+									<div class="col-xs-4 dice-face front-face dice-face-v2">
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-4 left-face dice-face dice-face-v2">
+									</div>
+									<div class="col-xs-4 current-face dice-face dice-face-v2">
+									</div>
+									<div class="col-xs-4 right-face dice-face dice-face-v2">
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-4 back-face dice-face dice-face-v2">
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 				 </div>
 				</div>
 			</div>
